<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">

    <string name="app_name">Icon Dialog</string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="btn_open">Open dialog</string>
    <string name="btn_add_extra">Add extra icons</string>

    <string name="selected_icons">Selected icons</string>
    <string name="selected_none">No icons selected</string>

    <string name="settings">Icon dialog settings</string>
    <string name="option_show_headers">Show category headers</string>
    <string name="option_sticky_headers">Sticky</string>
    <string name="option_max_sel">Max selection:</string>
    <string name="option_max_sel_message">Show message when reached</string>
    <string name="option_show_select">Show selection</string>
    <string name="option_disabled_categories">Disabled categories:</string>
    <string name="option_title_visibility">Title visibility:</string>
    <string name="option_search_visibility">Search visibility:</string>
    <string name="option_show_clear_btn">Show clear selection button</string>

    <string name="dialog_search_visb">Search visibility</string>
    <string-array name="option_search_visibility">
        <item>Always</item>
        <item>Never</item>
        <item>If language available</item>
    </string-array>

    <string name="dialog_title_visb">Title visibility</string>
    <string-array name="option_title_visibility">
        <item>Always</item>
        <item>Never</item>
        <item>If search not available</item>
    </string-array>

    <string name="dialog_disabled_catg">Disable categories</string>
    <string-array name="option_categories">
        <item>Family and people</item>
        <item>Home and personal care</item>
        <item>Technology</item>
        <item>Finance and shopping</item>
        <item>Leisure</item>
        <item>Transport and travel</item>
        <item>Food and drink</item>
        <item>Places and buildings</item>
        <item>Arts</item>
        <item>Sports</item>
        <item>Music and sound</item>
        <item>Photo and video</item>
        <item>Nature and animals</item>
        <item>Math and science</item>
        <item>Time</item>
        <item>Tools</item>
        <item>Computer</item>
        <item>Arrows</item>
        <item>Characters and symbols</item>
    </string-array>

    <string name="option_disabled_catg_fmt">{0,choice,0#No categories|1#1 category|1&lt;{0} categories}</string>
    <string name="selected_icon_id_fmt">ID {0}</string>
    <string name="icon_info_fmt">ID: {0}\nCategory: {1}\nLabels: {2}</string>
    <string name="load_time_fmt">Icons loaded in {0,number,#.#} ms</string>
    <string name="icon_count_fmt">{0,number} icons loaded</string>

    <string name="category_3d">3D icons</string>
    <string name="category_science">Mathemathics, biology and chemistry</string>

</resources>
