<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maltaisn.icondialoglib.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txv_selected_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/selected_icons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_open"/>

        <TextView
            android:id="@+id/txv_none_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_none"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/rcv_selected_icons"
            app:layout_constraintEnd_toEndOf="@+id/rcv_selected_icons"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="@+id/rcv_selected_icons"
            app:layout_constraintTop_toTopOf="@+id/rcv_selected_icons"
            tools:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_selected_icons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:minHeight="50dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_selected_icons"
            tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_icon"
            tools:orientation="horizontal"/>

        <TextView
            android:id="@+id/txv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcv_selected_icons"/>

        <CheckBox
            android:id="@+id/ckb_show_selection"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:text="@string/option_show_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_settings"/>

        <CheckBox
            android:id="@+id/ckb_show_headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/option_show_headers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ckb_show_selection"/>

        <CheckBox
            android:id="@+id/ckb_sticky_headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/option_sticky_headers"
            app:layout_constraintStart_toEndOf="@+id/ckb_show_headers"
            app:layout_constraintTop_toTopOf="@+id/ckb_show_headers"/>

        <CheckBox
            android:id="@+id/ckb_show_clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/option_show_clear_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ckb_show_headers"/>

        <CheckBox
            android:id="@+id/ckb_max_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:labelFor="@+id/edt_max_sel"
            android:text="@string/option_max_sel"
            app:layout_constraintBottom_toBottomOf="@id/edt_max_sel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edt_max_sel"/>

        <EditText
            android:id="@+id/edt_max_sel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ckb_max_sel"
            app:layout_constraintTop_toBottomOf="@+id/ckb_show_clear_btn"
            tools:text="1"
            tools:ignore="LabelFor"/>

        <CheckBox
            android:id="@+id/ckb_max_sel_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/option_max_sel_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_max_sel"/>

        <TextView
            android:id="@+id/txv_search_visb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/option_search_visibility"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/edt_search_visb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edt_search_visb"
            android:labelFor="@id/edt_search_visb"/>

        <EditText
            android:id="@+id/edt_search_visb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txv_search_visb"
            app:layout_constraintTop_toBottomOf="@+id/ckb_max_sel_message"
            tools:text="If language available"/>

        <TextView
            android:id="@+id/txv_title_visb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/option_title_visibility"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/edt_title_visb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edt_title_visb"
            android:labelFor="@id/edt_title_visb"/>

        <EditText
            android:id="@+id/edt_title_visb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txv_title_visb"
            app:layout_constraintTop_toBottomOf="@+id/edt_search_visb"
            tools:text="If search not available"/>

        <TextView
            android:id="@+id/txv_disabled_catg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/option_disabled_categories"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/edt_disabled_catg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edt_disabled_catg"
            android:labelFor="@id/edt_disabled_catg"/>

        <EditText
            android:id="@+id/edt_disabled_catg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txv_disabled_catg"
            app:layout_constraintTop_toBottomOf="@+id/edt_title_visb"
            tools:text="No categories"/>

        <Button
            android:id="@+id/btn_add_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_add_extra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_disabled_catg"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>